Dodanie widoku i kontrolera kategorii
