# expensesMonitor/api/controllers/category.js
@@ -1,5 +1,8 @@
 'use strict';
 
+var fs = require('fs');
+var path = require('path');
+
 var util = require('util');
 const thinkagain = require('thinkagain')();
 var r = thinkagain.r;
@@ -7,6 +10,7 @@ var r = thinkagain.r;
 
 module.exports = {
   categories,
+  manageCategories
 };
 
 function categories(req,res,next)
@@ -15,4 +19,11 @@ function categories(req,res,next)
 	{
 		res.json(result);
 	});
+}
+
+function manageCategories(req, res, next) 
+{
+	let file = path.join(__dirname,"..","..","html","categories.html");
+	let contents = fs.readFileSync(file, 'utf8');
+	res.send(contents);
 }
