# expensesMonitor/api/swagger/swagger.yaml
@@ -174,6 +174,17 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /manageCategories:
+    x-swagger-router-controller: category
+    get:
+      operationId: manageCategories
+      produces:
+        - text/html; charset=utf-8
+      responses:
+        200:
+          description: Success
+          schema:
+            type: string          
   /currencies:
     x-swagger-router-controller: currency
     get:
